=== 3.10 / ??

* Major enhancements
  * RDoc HTML output has been reorganized.
    * The table of contents is now a separate page and now shows links to
      headings inside a page or class.
    * Class pages no longer show the namespace and no longer have file info
      pages.
    * Quicksearch box in Class/Module Index in the sidebar is always shown.
  * RDoc supports RD format documentation.

* Minor enhancements
  * HTML headings now have ids matching their titles.

      = Hello!

    Is rendered as

      <h1 id="label-Hello%21">Hello!</h1>

  * Labels for classes or methods can be linked-to by adding an <tt>@</tt>
    following the class or method reference.  For example,
    <tt>RDoc::Markup@Links</tt>

    See RDoc::Markup@Links for further details.
  * RDoc now looks for a <tt>format: parser_name</tt> magic comment to choose
    alternate documentation formats.  The format comment must be in the first
    three lines of the file (to allow for a shebang or modeline).
  * Added RDoc::TopLevel#text? and RDoc::Parser::Text to indicate a
    parsed file contains no ruby constructs.
  * Added <tt>rdoc-label</tt> link scheme which allows bidirectional links.
    See RDoc::Markup for details.

* Bug fixes
  * Markup defined by RDoc::Markup#add_special inside a <tt><tt></tt> is no
    longer converted.

=== 3.9.2 / 2011-08-11

* Bug fix
  * Loosened TIDYLINK regexp to allow any content in the link section like:
    <tt>{foo}[rdoc-ref:SomeClass]</tt>
  * In HTML output headings are capped at <tt><h6></tt> again

=== 3.9.1 / 2011-07-31

* Bug fixes
  * Fix RDoc::Markup parser for a header followed by a non-text token.  Issue
    #56 by Adam Tait
  * Fix RDoc::Markup::ToHtmlCrossref#gen_url for non-<tt>rdoc-ref</tt> links.
  * Fix bug report URL when rdoc crashes.

=== 3.9 / 2011-07-30

* Minor enhancements
  * RDoc::Parser::C now supports :doc: and :nodoc: for class comments
  * Added the <tt>rdoc-ref:</tt> link scheme which links to a named reference.