@@ -1,8 +1,8 @@
-<meta content="text/html; charset=<%= @options.charset %>" http-equiv="Content-Type" />
+<meta content="text/html; charset=<%= @options.charset %>" http-equiv="Content-Type">
 
 <title><%= h @title %></title>
 
-<link type="text/css" media="screen" href="<%= rel_prefix %>/rdoc.css" rel="stylesheet" />
+<link type="text/css" media="screen" href="<%= rel_prefix %>/rdoc.css" rel="stylesheet">
 
 <script src="<%= rel_prefix %>/js/jquery.js" type="text/javascript" charset="utf-8"></script>
 <script src="<%= rel_prefix %>/js/thickbox-compressed.js" type="text/javascript" charset="utf-8"></script>
