@@ -1,17 +1,17 @@
-<div id="classindex-section" class="section project-section">
+<nav id="classindex-section" class="section project-section">
   <h3 class="section-header">Class and Module Index</h3>
 
   <form action="#" method="get" accept-charset="utf-8" class="initially-hidden">
-    <input type="text" name="quicksearch" id="quicksearch-field" />
+    <input type="text" name="quicksearch" id="quicksearch-field">
   </form>
 
   <ul class="link-list">
   <% @modsort.each do |index_klass| %>
-    <li><a href="<%= rel_prefix %>/<%= index_klass.path %>"><%= index_klass.full_name %></a></li>
+    <li><a href="<%= rel_prefix %>/<%= index_klass.path %>"><%= index_klass.full_name %></a>
   <% end %>
   </ul>
 
   <div id="no-class-search-results" style="display: none;">
     No matching classes.
   </div>
-</div>
+</nav>
