@@ -1,15 +1,15 @@
 <% unless klass.includes.empty? then %>
 <!-- Included Modules -->
-<div id="includes-section" class="section">
+<nav id="includes-section" class="section">
   <h3 class="section-header">Included Modules</h3>
   <ul class="link-list">
   <% klass.each_include do |inc| %>
   <% unless String === inc.module then %>
-    <li><a class="include" href="<%= klass.aref_to inc.module.path %>"><%= inc.module.full_name %></a></li>
+    <li><a class="include" href="<%= klass.aref_to inc.module.path %>"><%= inc.module.full_name %></a>
   <% else %>
-    <li><span class="include"><%= inc.name %></span></li>
+    <li><span class="include"><%= inc.name %></span>
   <% end %>
   <% end %>
   </ul>
-</div>
+</nav>
 <% end %>
