@@ -1,4 +1,4 @@
-<div id="home-metadata">
+<nav id="home-metadata">
   <div id="home-section" class="section">
     <h3 class="section-header">
       <a href="<%= rel_prefix %>/index.html">Home</a>
@@ -6,4 +6,4 @@
       <a href="<%= rel_prefix %>/table_of_contents.html#methods">Methods</a>
     </h3>
   </div>
-</div>
+</nav>
