@@ -1,11 +1,11 @@
 <% simple_files = @files.select { |f| f.text? } %>
 <% unless simple_files.empty? then %>
-<div id="fileindex-section" class="section project-section">
+<nav id="fileindex-section" class="section project-section">
   <h3 class="section-header">Pages</h3>
   <ul>
   <% simple_files.each do |f| %>
-    <li class="file"><a href="<%= rel_prefix %>/<%= f.path %>"><%= h f.page_name %></a></li>
+    <li class="file"><a href="<%= rel_prefix %>/<%= f.path %>"><%= h f.page_name %></a>
   <% end %>
   </ul>
-</div>
+</nav>
 <% end %>
