@@ -1,11 +1,10 @@
 <% unless klass.sections.length == 1 then %>
-<!-- Sections -->
-<div id="sections-section" class="section">
+<nav id="sections-section" class="section">
   <h3 class="section-header">Sections</h3>
   <ul class="link-list">
     <% klass.sections.sort_by { |s| s.title.to_s }.each do |section| %>
       <li><a href="#<%= section.aref %>"><%= h section.title %></a></li>
     <% end %>
   </ul>
-</div>
+</nav>
 <% end %>
