@@ -1,17 +1,17 @@
 <body>
-<div id="metadata">
+<nav id="metadata">
   <%= render '_sidebar_navigation.rhtml' %>
 
   <div id="project-metadata">
     <%= render '_sidebar_pages.rhtml' %>
     <%= render '_sidebar_classes.rhtml' %>
   </div>
-</div>
+</nav>
 
 <% if @options.main_page && main_page = @files.find { |f| f.full_name == @options.main_page } then %>
 <div id="documentation" class="description">
   <%= main_page.description %>
 </div>
 <% else %>
-<p>This is the API documentation for <%= @title %>.</p>
+<p>This is the API documentation for <%= @title %>.
 <% end %>
