@@ -1,12 +1,12 @@
 <body class="file">
-<div id="metadata">
+<nav id="metadata">
   <%= render '_sidebar_navigation.rhtml' %>
 
   <div id="project-metadata">
     <%= render '_sidebar_pages.rhtml' %>
     <%= render '_sidebar_classes.rhtml' %>
   </div>
-</div>
+</nav>
 
 <div id="documentation" class="description">
   <%= file.description %>
